--- a/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega.csproj
+++ b/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="index.html" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -106,7 +107,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="index.html" />
+    <Content Include="indexe.html">
+      <BrowseToURL>~/index.html</BrowseToURL>
+    </Content>
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Web.config" />
