--- a/Omega/Omega.Crawler.Tests/Omega.Crawler.Tests.csproj
+++ b/Omega/Omega.Crawler.Tests/Omega.Crawler.Tests.csproj
@@ -44,11 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrawlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="testClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Omega.Crawler\Omega.Crawler.csproj">
+      <Project>{648B6540-93A4-4663-B0A3-EEF834622849}</Project>
+      <Name>Omega.Crawler</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
