--- a/Omega/Omega.Crawler/Omega.Crawler.csproj
+++ b/Omega/Omega.Crawler/Omega.Crawler.csproj
@@ -49,10 +49,14 @@
   <ItemGroup>
     <Compile Include="Analyser.cs" />
     <Compile Include="CredentialAuth.cs" />
+    <Compile Include="DeezerConnect.cs" />
     <Compile Include="MetaDonnees.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spotifycation.cs" />
     <Compile Include="SpotifyToken.cs" />
+    <Compile Include="Undeplicate.cs" />
+    <Compile Include="UserInfoAndStuff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
