--- a/Omega/Omega/Omega.csproj
+++ b/Omega/Omega/Omega.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +91,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpotifyConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
