--- a/Omega/Omega.Crawler.Tests/Omega.Crawler.Tests.csproj
+++ b/Omega/Omega.Crawler.Tests/Omega.Crawler.Tests.csproj
@@ -48,12 +48,17 @@
     <Compile Include="testClass.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Omega.Crawler\Omega.Crawler.csproj">
       <Project>{648B6540-93A4-4663-B0A3-EEF834622849}</Project>
       <Name>Omega.Crawler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Omega.DataManager\Omega.DataManager.csproj">
+      <Project>{2335b04d-421d-4d59-a36c-c704a02b0939}</Project>
+      <Name>Omega.DataManager</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
