--- a/Omega/OmegaSPA/packages.config
+++ b/Omega/OmegaSPA/packages.config
@@ -2,7 +2,6 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="dotNETSpotifyWebAPI" version="1.0.2" targetFramework="net45" developmentDependency="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.fr" version="6.1.3" targetFramework="net45" />
   <package id="Facebook" version="7.0.6" targetFramework="net45" />
@@ -59,13 +58,15 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter.fr" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.Common" version="1.4.1" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net452" />
 </packages>
