Crawler changes, livefusionTest

--- a/Omega/Omega.DataManager.Test/Omega.DataManager.Test.csproj
+++ b/Omega/Omega.DataManager.Test/Omega.DataManager.Test.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Omega.Model\Omega.Model.csproj">
+      <Project>{40ef09d9-67d8-407a-92d0-ce44271ced3a}</Project>
+      <Name>Omega.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
