--- a/Omega/Omega.Crawler/Omega.Crawler.csproj
+++ b/Omega/Omega.Crawler/Omega.Crawler.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spotifycation.cs" />
+    <Compile Include="SpotifyToDeezer.cs" />
     <Compile Include="SpotifyToken.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="Undeplicate.cs" />
