--- a/Omega/Omega.DataManager/Omega.DataManager.csproj
+++ b/Omega/Omega.DataManager/Omega.DataManager.csproj
@@ -75,11 +75,11 @@
   <ItemGroup>
     <Compile Include="DatabaseQueries.cs" />
     <Compile Include="PlaylistEntity.cs" />
-    <Compile Include="RowTrackEntity.cs" />
+    <Compile Include="Models\TrackEntity.cs" />
     <Compile Include="CleanTrack.cs" />
     <Compile Include="DatabaseCreator.cs" />
     <Compile Include="MetaDonnees.cs" />
-    <Compile Include="UserEntity.cs" />
+    <Compile Include="Models\UserEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests.cs" />
   </ItemGroup>
