--- a/Omega/Omega.Model.Tests/Omega.Model.Tests.csproj
+++ b/Omega/Omega.Model.Tests/Omega.Model.Tests.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
