--- a/Omega/OmegaSPA/Web.config
+++ b/Omega/OmegaSPA/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Pour plus d’informations sur la configuration de votre application ASP.NET, rendez-vous sur 
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-OmegaSPA-20160524044656.mdf;Initial Catalog=aspnet-OmegaSPA-20160524044656;Integrated Security=True;User Instance=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-OmegaSPA-20160524044656.mdf;Initial Catalog=aspnet-OmegaSPA-20160524044656;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
