--- a/Omega/OmegaSPA/packages.config
+++ b/Omega/OmegaSPA/packages.config
@@ -62,8 +62,9 @@
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Owin.Security.Providers.Spotify" version="2.6.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
