--- a/Omega/OmegaSPA/OmegaSPA.csproj
+++ b/Omega/OmegaSPA/OmegaSPA.csproj
@@ -323,6 +323,7 @@
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\spotifyConnect.png" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
