--- a/Omega/Omega.DataManager/Omega.DataManager.csproj
+++ b/Omega/Omega.DataManager/Omega.DataManager.csproj
@@ -74,7 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseQueries.cs" />
-    <Compile Include="PlaylistEntity.cs" />
+    <Compile Include="Models\PlaylistEntity.cs" />
     <Compile Include="Models\TrackEntity.cs" />
     <Compile Include="CleanTrack.cs" />
     <Compile Include="DatabaseCreator.cs" />
