we can now retrieve all playlist from an event's members

--- a/Omega/Omega.DataManager/Omega.DataManager.csproj
+++ b/Omega/Omega.DataManager/Omega.DataManager.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseQueries.cs" />
+    <Compile Include="Models\FacebookUserEntity.cs" />
     <Compile Include="Models\PlaylistEntity.cs" />
     <Compile Include="Models\TrackEntity.cs" />
     <Compile Include="CleanTrack.cs" />
