--- a/Omega/OmegaSPA/OmegaSPA.csproj
+++ b/Omega/OmegaSPA/OmegaSPA.csproj
@@ -425,6 +425,10 @@
       <Project>{2335b04d-421d-4d59-a36c-c704a02b0939}</Project>
       <Name>Omega.DataManager</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Omega.Model\Omega.Model.csproj">
+      <Project>{40ef09d9-67d8-407a-92d0-ce44271ced3a}</Project>
+      <Name>Omega.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
